fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -835,7 +835,7 @@ div::-webkit-scrollbar-thumb {
 }
 
 #lottie-2 {
-  z-index: 0;
+  z-index: 2;
   -webkit-transition: width 0.3s, height 0.3s, margin 0.3s, opacity 0.3s, top 1s;
   -moz-transition: width 0.3s, height 0.3s, margin 0.3s, opacity 0.3s, top 1s;
   -o-transition: width 0.3s, height 0.3s, margin 0.3s, opacity 0.3s, top 1s;
@@ -846,6 +846,7 @@ div::-webkit-scrollbar-thumb {
   height: 700px;
   margin-left: -830px;
   margin-top: -400px;
+  z-index: 1;
 }
 #lottie-2.paused {
   width: 1920px;
